# pysiaalarm

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  pytest.ini  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  release.yaml  test.yml
docs/: Makefile  SIA AJAX 2,29.xlsx  SIA Codes, OS Malevich 2.8_2.9.xlsx  conf.py  index.rst
pysiaalarm/: AUTHORS.rst  LICENSE.txt  README.rst  setup.cfg  setup.py
pysiaalarm/docs/: conf.py  index.rst
pysiaalarm/src/pysiaalarm/: skeleton.py
pysiaalarm/tests/: conftest.py  test_skeleton.py
src/pysia/: sia_client.py  sia_event.py  sia_tcp_handler.py  skeleton.py
src/pysiaalarm/: __init__.py  account.py  base_client.py  base_server.py  base_sia_client.py  base_sia_server.py  const.py  errors.py  event.py  sia_account.py  sia_client.py  sia_const.py  sia_errors.py  sia_event.py  sia_server.py  sia_tcp_handler.py  sia_udp_server.py
src/pysiaalarm/aio/: __init__.py  client.py  server.py  sia_client.py  sia_server.py  sia_udp_server.py
src/pysiaalarm/data/: __init__.py  adm_mapping.json  adm_mapping.py  data.py  sia_codes.json  sia_codes.py  xdata.json  xdata.py
src/pysiaalarm/sync/: __init__.py  client.py  handler.py  server.py
src/pysiaalarm/utils/: __init__.py  counter.py  enums.py  osborne_hoffman.py  regexes.py
tests/: __init__.py  conftest.py  create_line.py  encrypted_config.json  ha.json  local_config.json  run.py  run_aio.py  run_re.py  test_alarm.py  test_alarm_aio.py  test_client.py  test_client_aio.py  test_sia_client.py  test_sia_package.py  test_sia_package_cases.py  test_skeleton.py  test_utils.py  unencrypted_config.json
