# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pysiaalarm
description = Python package for creating a client that talks with SIA-based alarm systems.
author = E.A. van Valkenburg
author-email = github@vanvalkenburg.eu
license = MIT
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
# Add here related links, for example:
project-urls =
    Documentation = https://github.com/eavanvalkenburg/pysiaalarm
    Source = https://github.com/eavanvalkenburg/pysiaalarm
    
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.7

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    pycryptodome>=3.9.7

[options.packages.find]
where = src
exclude =
    tests
    docs

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install pysiaalarm[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
test =
    setuptools
    setuptools_scm 
    wheel
    pytest
    pytest-cov
    pytest-asyncio
    pytest-cases
    tox

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = pysiaalarm.module:function
# For example:
# console_scripts =
#     fibonacci = pysiaalarm.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

# [tool:pytest]


[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 88
extend-ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0
package = pysiaalarm
extensions =
    no_pyproject
