# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pysiaalarm
description = Python package for creating a client that talks with SIA-based alarm systems.
author = E.A. van Valkenburg
author_email = github@vanvalkenburg.eu
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/eavanvalkenburg/pysiaalarm
    Source = https://github.com/eavanvalkenburg/pysiaalarm
    
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    pycryptodome>=3.9.7

[options.package_data]
pysiaalarm = py.typed

[options.packages.find]
where = src
exclude =
    tests
    docs

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install pysiaalarm[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
test =
    setuptools
    setuptools_scm 
    wheel
    pytest
    pytest-cov
    pytest-asyncio
    pytest-cases
    tox
    mypy
    types-setuptools

[options.entry_points]


[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[mypy]
files = src/
python_version = 3.8
disallow_untyped_defs = True
ignore_missing_imports = True

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0.1
package = pysiaalarm
extensions =
